# book-manager

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
adapter/migrations/: 20241120103344_start.down.sql
src/: main.rs
