[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.5", features = ["macros"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.37.0", features = ["full"] }
idna = "0.5.0"

[[bin]]
name = "app"
path = "src/main.rs"

[dev-dependencies]
rstest = "0.18.2"
